// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactUs should fill the contact form 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-secondary-background"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzqARJ juliij"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fzqNqU bFCCVL"
            >
              <svg
                width="48"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-secondary-text hover:text-theme-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-secondary-text hover:text-theme-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-secondary-text hover:text-theme-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-secondary-text hover:text-theme-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="overflow-hidden rounded-lg"
                >
                  <button
                    class="sc-AxjAm cGlMcw text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                    color="primary"
                    data-testid="navbar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="sc-AxirZ hmuEJr p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        notification.svg
                      </svg>
                    </div>
                    <div
                      class="absolute right-0 flex items-center justify-center w-3 h-3 mr-3 -mt-3 rounded-full bg-theme-background border-theme-background"
                    >
                      <div
                        class="w-2 h-2 rounded-full bg-theme-danger-500"
                      />
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm cGlMcw text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="sc-AxirZ hmuEJr p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm cGlMcw text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxirZ hmuEJr p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    qr-code.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 mr-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-neutral-700"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 -space-x-2 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxhUy iDenJW border-theme-primary-contrast dark:border-theme-neutral-800"
                >
                  <span
                    class="text-theme-secondary-text dark:text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-AxhCb dsxoZl flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500 dark:bg-theme-neutral-800 dark:border-theme-neutral-800 dark:text-theme-text"
                  >
                    <div
                      class="sc-AxirZ fttODj"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-3 text-sm container py-5 mx-auto font-semibold px-14 text-theme-secondary-text"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxirZ eKWnGz"
        height="24"
        width="13"
      >
        <svg>
          arrow-left.svg
        </svg>
      </div>
      <div
        class="space-x-3"
      >
        <a
          class="text-theme-secondary-text"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 "
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                Contact Us
              </h1>
              <div
                class="text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                Have questions? Contact our Team for additional support.
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex flex-col space-y-16 md:py-8 lg:flex-row lg:space-x-8 lg:space-y-0 xl:space-x-16"
          >
            <div
              class="flex-1 space-y-8 border-theme-neutral-300 dark:border-theme-neutral-800 lg:border-r lg:pr-8 xl:pr-24"
            >
              <div
                class="pb-8 border-b border-dashed border-theme-neutral-300 dark:border-theme-neutral-800"
              >
                <h3
                  class="mb-1 text-3xl font-bold"
                >
                  Let Us Help!
                </h3>
                <div
                  class="mt-4 leading-7 text-theme-secondary-text"
                >
                  Whether you want to learn more about ARK, need help with your Blockchain, or just want to know how ARK technology could work for you, get in touch and a member of the team will follow up with you.
                </div>
              </div>
              <div
                class="pb-8 border-b border-dashed border-theme-neutral-300 dark:border-theme-neutral-800"
              >
                <h3
                  class="mb-1 text-3xl font-bold"
                >
                  Additional Support
                </h3>
                <div
                  class="mt-4 leading-7 text-theme-secondary-text"
                >
                  Need more help? Check out our documentation below or reach out to our team members on Slack and Discord.
                </div>
                <div
                  class="flex flex-col mt-6 space-y-3 sm:flex-row sm:space-x-2 sm:space-y-0 sm:items-center"
                >
                  <button
                    class="sc-AxjAm fCKjFI"
                    color="primary"
                    type="button"
                  >
                    Documentation
                  </button>
                  <span
                    class="font-semibold leading-none text-center text-theme-secondary-text"
                  >
                    or
                  </span>
                  <button
                    class="sc-AxjAm fCKjFI space-x-2"
                    color="primary"
                    type="button"
                  >
                    <div
                      class="sc-AxirZ eEbZjj"
                      height="20"
                      width="20"
                    >
                      <svg>
                        slack-flat.svg
                      </svg>
                    </div>
                    <span>
                      Slack
                    </span>
                  </button>
                  <button
                    class="sc-AxjAm fCKjFI space-x-2"
                    color="primary"
                    type="button"
                  >
                    <div
                      class="sc-AxirZ eEbZjj"
                      height="20"
                      width="20"
                    >
                      <svg>
                        discord-flat.svg
                      </svg>
                    </div>
                    <span>
                      Discord
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="space-y-3 text-theme-secondary-900"
              >
                <div
                  class="font-bold"
                >
                  We're on social networks
                </div>
                <div
                  class="flex space-x-3"
                >
                  <a
                    class="sc-fznyAO oXcxU block w-16 border rounded-lg cursor-pointer border-theme-neutral-300 dark:border-theme-neutral-800 h-14 lg:w-14 lg:h-12 transition-default hover:bg-theme-danger-400 hover:text-white"
                    data-testid="Link"
                    rel="noopener noreferrer"
                    to="https://twitter.ark.io/"
                  >
                    <div
                      class="flex items-center justify-center h-full"
                    >
                      <div
                        class="sc-AxirZ eEbZjj"
                        height="20"
                        width="20"
                      >
                        <svg>
                          twitter.svg
                        </svg>
                      </div>
                    </div>
                  </a>
                  <a
                    class="sc-fznyAO oXcxU block w-16 border rounded-lg cursor-pointer border-theme-neutral-300 dark:border-theme-neutral-800 h-14 lg:w-14 lg:h-12 transition-default hover:bg-theme-danger-400 hover:text-white"
                    data-testid="Link"
                    rel="noopener noreferrer"
                    to="https://facebook.ark.io/"
                  >
                    <div
                      class="flex items-center justify-center h-full"
                    >
                      <div
                        class="sc-AxirZ eEbZjj"
                        height="20"
                        width="20"
                      >
                        <svg>
                          facebook.svg
                        </svg>
                      </div>
                    </div>
                  </a>
                  <a
                    class="sc-fznyAO oXcxU block w-16 border rounded-lg cursor-pointer border-theme-neutral-300 dark:border-theme-neutral-800 h-14 lg:w-14 lg:h-12 transition-default hover:bg-theme-danger-400 hover:text-white"
                    data-testid="Link"
                    rel="noopener noreferrer"
                    to="https://reddit.ark.io/"
                  >
                    <div
                      class="flex items-center justify-center h-full"
                    >
                      <div
                        class="sc-AxirZ eEbZjj"
                        height="20"
                        width="20"
                      >
                        <svg>
                          reddit.svg
                        </svg>
                      </div>
                    </div>
                  </a>
                  <a
                    class="sc-fznyAO oXcxU block w-16 border rounded-lg cursor-pointer border-theme-neutral-300 dark:border-theme-neutral-800 h-14 lg:w-14 lg:h-12 transition-default hover:bg-theme-danger-400 hover:text-white"
                    data-testid="Link"
                    rel="noopener noreferrer"
                    to="https://www.linkedin.com/company/ark-ecosystem"
                  >
                    <div
                      class="flex items-center justify-center h-full"
                    >
                      <div
                        class="sc-AxirZ eEbZjj"
                        height="20"
                        width="20"
                      >
                        <svg>
                          linkedin.svg
                        </svg>
                      </div>
                    </div>
                  </a>
                </div>
              </div>
            </div>
            <div
              class="flex flex-col flex-1 lg:px-5"
            >
              <h3
                class="mb-1 text-3xl font-bold"
              >
                Contact Our Team
              </h3>
              <div
                class="mt-4 text-theme-secondary-text"
              >
                We'd be happy to answer your questions.
              </div>
              <form
                class="flex flex-col flex-1 mt-8 space-y-8"
                data-testid="Form"
              >
                <div
                  class="flex flex-col space-y-8 sm:flex-row sm:space-x-3 sm:space-y-0"
                >
                  <div
                    class="w-full"
                  >
                    <fieldset
                      class="sc-fznZeY dWCRDT flex flex-col space-y-2"
                    >
                      <label
                        class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                        data-testid="FormLabel"
                        for="name"
                      >
                        Name
                        <div
                          class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                          data-testid="FormLabel__required"
                        />
                      </label>
                      <input
                        class="sc-fzoyAV TAWLD overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
                        data-testid="Input"
                        name="name"
                      />
                    </fieldset>
                  </div>
                  <div
                    class="w-full"
                  >
                    <fieldset
                      class="sc-fznZeY dWCRDT flex flex-col space-y-2"
                    >
                      <label
                        class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                        data-testid="FormLabel"
                        for="email"
                      >
                        Email
                        <div
                          class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                          data-testid="FormLabel__required"
                        />
                      </label>
                      <input
                        class="sc-fzoyAV TAWLD overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
                        data-testid="Input"
                        name="email"
                      />
                    </fieldset>
                  </div>
                </div>
                <fieldset
                  class="sc-fznZeY dWCRDT flex flex-col space-y-2"
                >
                  <label
                    class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                    data-testid="FormLabel"
                    for="subject"
                  >
                    Subject
                    <div
                      class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                      data-testid="FormLabel__required"
                    />
                  </label>
                  <div
                    class="relative w-full"
                  >
                    <input
                      class="sc-fzoyAV TAWLD overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 sr-only"
                      data-testid="select-list__input"
                      name="subject"
                      readonly=""
                      type="text"
                      value="security"
                    />
                    <div
                      class="relative w-full"
                    >
                      <div
                        aria-expanded="true"
                        aria-haspopup="listbox"
                        aria-owns="downshift-5-menu"
                        role="combobox"
                      >
                        <label
                          for="downshift-4-input"
                          id="downshift-5-label"
                        />
                        <div
                          class="sc-fznxsB hhZPAY"
                          data-testid="SelectDropdownInput"
                        >
                          <span
                            class="sc-fzoLag buWfop py-3 pl-4 font-normal border border-transparent opacity-50 pointer-events-none"
                            data-testid="SelectDropdownInput__typeahead"
                          >
                            Security
                          </span>
                          <input
                            aria-activedescendant="downshift-5-item-0"
                            aria-autocomplete="list"
                            aria-controls="downshift-5-menu"
                            aria-labelledby="downshift-5-label"
                            autocomplete="off"
                            class="sc-fzoyAV TAWLD overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 cursor-default"
                            data-testid="SelectDropdownInput__input"
                            id="downshift-4-input"
                            name="subject"
                            placeholder="Select Subject"
                            value="Security"
                          />
                        </div>
                        <ul
                          aria-labelledby="downshift-5-label"
                          class="sc-fzoNJl fpxwNA is-open"
                          id="downshift-5-menu"
                          role="listbox"
                        >
                          <li
                            aria-selected="true"
                            class="select-list-option cursor-default is-highlighted"
                            data-testid="select-list__toggle-option-0"
                            id="downshift-5-item-0"
                            role="option"
                          >
                            <div
                              class="select-list-option__label"
                            >
                              Security
                            </div>
                          </li>
                          <li
                            aria-selected="false"
                            class="select-list-option cursor-default "
                            data-testid="select-list__toggle-option-1"
                            id="downshift-5-item-1"
                            role="option"
                          >
                            <div
                              class="select-list-option__label"
                            >
                              Other
                            </div>
                          </li>
                        </ul>
                      </div>
                      <div
                        class="sc-fzoLag sc-fzpjYC fdEbuY w-10 pointer-events-none text-theme-neutral"
                      >
                        <div
                          class="sc-AxirZ eRmuSF transform rotate-180"
                          height="5"
                          width="7"
                        >
                          <svg>
                            caret-down.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </fieldset>
                <fieldset
                  class="sc-fznZeY dWCRDT flex flex-col space-y-2"
                >
                  <label
                    class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                    data-testid="FormLabel"
                    for="message"
                  >
                    Message
                    <div
                      class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                      data-testid="FormLabel__required"
                    />
                  </label>
                  <textarea
                    class="sc-fzoyAV TAWLD overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
                    data-testid="TextArea"
                    name="message"
                    placeholder="How can we help?"
                    rows="3"
                    wrap="hard"
                  />
                </fieldset>
                <div
                  class="relative flex flex-col justify-end flex-1"
                >
                  <button
                    class="sc-AxjAm colAFb"
                    color="primary"
                    data-testid="ContactForm__submit-button"
                    type="submit"
                  >
                    Send
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContactUs should render 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-secondary-background"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzqARJ juliij"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fzqNqU bFCCVL"
            >
              <svg
                width="48"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-secondary-text hover:text-theme-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-secondary-text hover:text-theme-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-secondary-text hover:text-theme-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-secondary-text hover:text-theme-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="overflow-hidden rounded-lg"
                >
                  <button
                    class="sc-AxjAm cGlMcw text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                    color="primary"
                    data-testid="navbar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="sc-AxirZ hmuEJr p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        notification.svg
                      </svg>
                    </div>
                    <div
                      class="absolute right-0 flex items-center justify-center w-3 h-3 mr-3 -mt-3 rounded-full bg-theme-background border-theme-background"
                    >
                      <div
                        class="w-2 h-2 rounded-full bg-theme-danger-500"
                      />
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm cGlMcw text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="sc-AxirZ hmuEJr p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm cGlMcw text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxirZ hmuEJr p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    qr-code.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 mr-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-neutral-700"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 -space-x-2 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxhUy iDenJW border-theme-primary-contrast dark:border-theme-neutral-800"
                >
                  <span
                    class="text-theme-secondary-text dark:text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-AxhCb dsxoZl flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500 dark:bg-theme-neutral-800 dark:border-theme-neutral-800 dark:text-theme-text"
                  >
                    <div
                      class="sc-AxirZ fttODj"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-3 text-sm container py-5 mx-auto font-semibold px-14 text-theme-secondary-text"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxirZ eKWnGz"
        height="24"
        width="13"
      >
        <svg>
          arrow-left.svg
        </svg>
      </div>
      <div
        class="space-x-3"
      >
        <a
          class="text-theme-secondary-text"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 "
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                Contact Us
              </h1>
              <div
                class="text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                Have questions? Contact our Team for additional support.
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex flex-col space-y-16 md:py-8 lg:flex-row lg:space-x-8 lg:space-y-0 xl:space-x-16"
          >
            <div
              class="flex-1 space-y-8 border-theme-neutral-300 dark:border-theme-neutral-800 lg:border-r lg:pr-8 xl:pr-24"
            >
              <div
                class="pb-8 border-b border-dashed border-theme-neutral-300 dark:border-theme-neutral-800"
              >
                <h3
                  class="mb-1 text-3xl font-bold"
                >
                  Let Us Help!
                </h3>
                <div
                  class="mt-4 leading-7 text-theme-secondary-text"
                >
                  Whether you want to learn more about ARK, need help with your Blockchain, or just want to know how ARK technology could work for you, get in touch and a member of the team will follow up with you.
                </div>
              </div>
              <div
                class="pb-8 border-b border-dashed border-theme-neutral-300 dark:border-theme-neutral-800"
              >
                <h3
                  class="mb-1 text-3xl font-bold"
                >
                  Additional Support
                </h3>
                <div
                  class="mt-4 leading-7 text-theme-secondary-text"
                >
                  Need more help? Check out our documentation below or reach out to our team members on Slack and Discord.
                </div>
                <div
                  class="flex flex-col mt-6 space-y-3 sm:flex-row sm:space-x-2 sm:space-y-0 sm:items-center"
                >
                  <button
                    class="sc-AxjAm fCKjFI"
                    color="primary"
                    type="button"
                  >
                    Documentation
                  </button>
                  <span
                    class="font-semibold leading-none text-center text-theme-secondary-text"
                  >
                    or
                  </span>
                  <button
                    class="sc-AxjAm fCKjFI space-x-2"
                    color="primary"
                    type="button"
                  >
                    <div
                      class="sc-AxirZ eEbZjj"
                      height="20"
                      width="20"
                    >
                      <svg>
                        slack-flat.svg
                      </svg>
                    </div>
                    <span>
                      Slack
                    </span>
                  </button>
                  <button
                    class="sc-AxjAm fCKjFI space-x-2"
                    color="primary"
                    type="button"
                  >
                    <div
                      class="sc-AxirZ eEbZjj"
                      height="20"
                      width="20"
                    >
                      <svg>
                        discord-flat.svg
                      </svg>
                    </div>
                    <span>
                      Discord
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="space-y-3 text-theme-secondary-900"
              >
                <div
                  class="font-bold"
                >
                  We're on social networks
                </div>
                <div
                  class="flex space-x-3"
                >
                  <a
                    class="sc-fznyAO oXcxU block w-16 border rounded-lg cursor-pointer border-theme-neutral-300 dark:border-theme-neutral-800 h-14 lg:w-14 lg:h-12 transition-default hover:bg-theme-danger-400 hover:text-white"
                    data-testid="Link"
                    rel="noopener noreferrer"
                    to="https://twitter.ark.io/"
                  >
                    <div
                      class="flex items-center justify-center h-full"
                    >
                      <div
                        class="sc-AxirZ eEbZjj"
                        height="20"
                        width="20"
                      >
                        <svg>
                          twitter.svg
                        </svg>
                      </div>
                    </div>
                  </a>
                  <a
                    class="sc-fznyAO oXcxU block w-16 border rounded-lg cursor-pointer border-theme-neutral-300 dark:border-theme-neutral-800 h-14 lg:w-14 lg:h-12 transition-default hover:bg-theme-danger-400 hover:text-white"
                    data-testid="Link"
                    rel="noopener noreferrer"
                    to="https://facebook.ark.io/"
                  >
                    <div
                      class="flex items-center justify-center h-full"
                    >
                      <div
                        class="sc-AxirZ eEbZjj"
                        height="20"
                        width="20"
                      >
                        <svg>
                          facebook.svg
                        </svg>
                      </div>
                    </div>
                  </a>
                  <a
                    class="sc-fznyAO oXcxU block w-16 border rounded-lg cursor-pointer border-theme-neutral-300 dark:border-theme-neutral-800 h-14 lg:w-14 lg:h-12 transition-default hover:bg-theme-danger-400 hover:text-white"
                    data-testid="Link"
                    rel="noopener noreferrer"
                    to="https://reddit.ark.io/"
                  >
                    <div
                      class="flex items-center justify-center h-full"
                    >
                      <div
                        class="sc-AxirZ eEbZjj"
                        height="20"
                        width="20"
                      >
                        <svg>
                          reddit.svg
                        </svg>
                      </div>
                    </div>
                  </a>
                  <a
                    class="sc-fznyAO oXcxU block w-16 border rounded-lg cursor-pointer border-theme-neutral-300 dark:border-theme-neutral-800 h-14 lg:w-14 lg:h-12 transition-default hover:bg-theme-danger-400 hover:text-white"
                    data-testid="Link"
                    rel="noopener noreferrer"
                    to="https://www.linkedin.com/company/ark-ecosystem"
                  >
                    <div
                      class="flex items-center justify-center h-full"
                    >
                      <div
                        class="sc-AxirZ eEbZjj"
                        height="20"
                        width="20"
                      >
                        <svg>
                          linkedin.svg
                        </svg>
                      </div>
                    </div>
                  </a>
                </div>
              </div>
            </div>
            <div
              class="flex flex-col flex-1 lg:px-5"
            >
              <h3
                class="mb-1 text-3xl font-bold"
              >
                Contact Our Team
              </h3>
              <div
                class="mt-4 text-theme-secondary-text"
              >
                We'd be happy to answer your questions.
              </div>
              <form
                class="flex flex-col flex-1 mt-8 space-y-8"
                data-testid="Form"
              >
                <div
                  class="flex flex-col space-y-8 sm:flex-row sm:space-x-3 sm:space-y-0"
                >
                  <div
                    class="w-full"
                  >
                    <fieldset
                      class="sc-fznZeY dWCRDT flex flex-col space-y-2"
                    >
                      <label
                        class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                        data-testid="FormLabel"
                        for="name"
                      >
                        Name
                        <div
                          class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                          data-testid="FormLabel__required"
                        />
                      </label>
                      <input
                        class="sc-fzoyAV TAWLD overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
                        data-testid="Input"
                        name="name"
                      />
                    </fieldset>
                  </div>
                  <div
                    class="w-full"
                  >
                    <fieldset
                      class="sc-fznZeY dWCRDT flex flex-col space-y-2"
                    >
                      <label
                        class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                        data-testid="FormLabel"
                        for="email"
                      >
                        Email
                        <div
                          class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                          data-testid="FormLabel__required"
                        />
                      </label>
                      <input
                        class="sc-fzoyAV TAWLD overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
                        data-testid="Input"
                        name="email"
                      />
                    </fieldset>
                  </div>
                </div>
                <fieldset
                  class="sc-fznZeY dWCRDT flex flex-col space-y-2"
                >
                  <label
                    class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                    data-testid="FormLabel"
                    for="subject"
                  >
                    Subject
                    <div
                      class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                      data-testid="FormLabel__required"
                    />
                  </label>
                  <div
                    class="relative w-full"
                  >
                    <input
                      class="sc-fzoyAV TAWLD overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 sr-only"
                      data-testid="select-list__input"
                      name="subject"
                      readonly=""
                      type="text"
                      value=""
                    />
                    <div
                      class="relative w-full"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="downshift-1-menu"
                        role="combobox"
                      >
                        <label
                          for="downshift-0-input"
                          id="downshift-1-label"
                        />
                        <div
                          class="sc-fznxsB hhZPAY"
                          data-testid="SelectDropdownInput"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="downshift-1-menu"
                            aria-labelledby="downshift-1-label"
                            autocomplete="off"
                            class="sc-fzoyAV TAWLD overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 cursor-default"
                            data-testid="SelectDropdownInput__input"
                            id="downshift-0-input"
                            name="subject"
                            placeholder="Select Subject"
                            value=""
                          />
                        </div>
                        <ul
                          aria-labelledby="downshift-1-label"
                          class="sc-fzoNJl fpxwNA"
                          id="downshift-1-menu"
                          role="listbox"
                        />
                      </div>
                      <div
                        class="sc-fzoLag sc-fzpjYC fdEbuY w-10 pointer-events-none text-theme-neutral"
                      >
                        <div
                          class="sc-AxirZ eRmuSF"
                          height="5"
                          width="7"
                        >
                          <svg>
                            caret-down.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </fieldset>
                <fieldset
                  class="sc-fznZeY dWCRDT flex flex-col space-y-2"
                >
                  <label
                    class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                    data-testid="FormLabel"
                    for="message"
                  >
                    Message
                    <div
                      class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                      data-testid="FormLabel__required"
                    />
                  </label>
                  <textarea
                    class="sc-fzoyAV TAWLD overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
                    data-testid="TextArea"
                    name="message"
                    placeholder="How can we help?"
                    rows="3"
                    wrap="hard"
                  />
                </fieldset>
                <div
                  class="relative flex flex-col justify-end flex-1"
                >
                  <button
                    class="sc-AxjAm colAFb"
                    color="primary"
                    data-testid="ContactForm__submit-button"
                    type="submit"
                  >
                    Send
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
